fixed weather details on mobile

--- a/frontend/src/styles/map.css
+++ b/frontend/src/styles/map.css
@@ -31,7 +31,7 @@
 }
 
 .rt-SegmentedControlRoot {
-    /* margin-bottom: 2rem; */
+    margin-bottom: 2rem;
 }
 
 .rt-SegmentedControlItem { 
@@ -116,7 +116,7 @@
     width: 90%;
     bottom: 3.5rem;
     left: 50%;
-    /* height: 6rem; */
+    height: 6rem;
     transform: translateX(-50%);
     padding: 1rem;
     gap: 4rem;
@@ -197,8 +197,8 @@
 
 .color_legend_container {
     position: absolute;
-    top: 6.4rem;
-    left: 1.5rem;
+    top: 1.1rem;
+    left: 3rem;
     background: var(--argentinian_blue_500);
     display: flex;
     flex-direction: column;
