--- a/frontend/src/styles/nav.css
+++ b/frontend/src/styles/nav.css
@@ -239,7 +239,8 @@
     overflow-y: auto;
     position: absolute;
     top: 7.2rem;
-    left: -10.5rem;
+    left: 50%;
+    transform: translateX(-50%);
     background: var(--anti_flash_white_100);
     min-width: 40rem;
     max-height: 40rem;
