--- a/frontend/src/styles/searchBar.css
+++ b/frontend/src/styles/searchBar.css
@@ -13,6 +13,7 @@
     width: 100%;
     height: 4rem;
     border-radius: 12px;
+    margin-bottom: 2rem;
     /* margin-bottom: 2rem; */
     border: none;
     box-shadow: -1px 2px 5px 3px rgba(3, 33, 58, .25),
